fixed spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -236,7 +236,7 @@ i {
   .appear-right {
     border-radius: 10%;
     opacity: 0;
-    transform: translateX(10em);
+    transform: translateX(8em);
     transition: transform 4s 0.25s cubic-bezier(0, 1, 0.3, 1), opacity 0.3s 0.25s ease-out;
     will-change: transform, opacity;
   }
